- Report viewer summary now includes `safe_run_receipt.json` and `operator_receipt.json` digests for fast cross-verification.
- Report viewer now includes `Copy Digests` for digest-only clipboard export (`runId`, artifact fingerprint/digest, safe/operator receipt digests).
- Launchpad History UX improvements: direct View Report action and keyboard open behavior (double-click/Enter).
- Report viewer now includes a collapsed Adapter Evidence section (shown only when adapter/capability artifacts exist), with quick-open buttons for capability, summary, and findings JSON artifacts.
- Launchpad History now shows an Adapter tag column (including plugin usage and denied-capability marker) derived from the latest run receipt.
- Launchpad History now includes an inline details pane for selected rows showing adapter class/id/mode/source/reasons and capability counts without leaving Launchpad.
- Launchpad History actions now include `Open Run` and `Open Evidence` for selected rows, opening latest run and `analysis` artifact folders directly.
- Launchpad History now falls back to newest `run_*` folder detection when `view_state.json` is missing or stale, so report/evidence actions still work on older libraries.
- Launchpad History fallback now also reads `report_card_v0.json`/`report_card.txt` to recover status/buckets/baseline when view-state metadata is incomplete.
- Launchpad History now includes `Copy Details` to copy selected inline evidence summary text for ticket/share workflows.
- Launchpad History now supports keyboard copy (`Ctrl+C`) from history list/details pane for faster evidence sharing.
- Launchpad History now includes `Copy Digests` for digest/fingerprint-only clipboard output in ticket/cross-verification workflows.
- Launchpad History now supports keyboard digest copy (`Ctrl+Shift+C`) from history list/details pane.